# EngramDB

./: .gitignore  CLAUDE.md  Cargo.toml  FUTURE_INNOVATIONS.md  INNOVATIONS.md  LICENSE.md  MVP.md  README.md  SPECS.md  TODO.md  \  openapi.yaml  sample_data_example.engramdb  test_cli_db.engramdb  test_config.engramdb  test_single_file.engramdb
.github/: README.md
.github/workflows/: ci.yml
assets/: engram_arch_2.mermaid  engramdb_arch.mermaid
benches/: README.md  batch_benchmark.py  benchmark_utils.py  embedding_benchmark.py  hnsw_memory_benchmark.rs  memory_vs_file_benchmark.py  requirements.txt  run_all_benchmarks.py  search_benchmark.py  storage_benchmark.py  vector_search.rs
cookbook/: CONTRIBUTING.md  README.md  TODO.md
cookbook/advanced/: README.md
cookbook/agent_use_cases/: README.md
cookbook/notebooks/: README.md  interactive_tutorial.ipynb
cookbook/providers/: README.md
cookbook/providers/anthropic/: README.md
cookbook/providers/gemini/: README.md
cookbook/providers/groq/: README.md
cookbook/providers/ollama/: README.md
cookbook/providers/openai/: README.md
cookbook/quickstart/: README.md
deck/: README.md  engramdb_pitch.md  engramdb_pitch_deck.md  engramdb_pitch_v2.md  research.md
docs/: README.md  contributing.md  contributing.mdx  convert_to_mdx.sh  core-concepts.md  core-concepts.mdx  docs.json  getting-started.md  getting-started.mdx  index.mdx  introduction.mdx  mint.json  package.json  run_docs.sh  tailwind.config.js
docs/.mintlify/: config.json
docs/advanced-topics/: background-processing.mdx  connections.md  connections.mdx  embeddings.mdx  storage-engines.md  storage-engines.mdx  temporal-layers.md  temporal-layers.mdx
docs/api-reference/: database.md  database.mdx  memory-node.md  memory-node.mdx  query.md  query.mdx  vector-index.md  vector-index.mdx
docs/examples/: python-examples.md  python-examples.mdx  rust-examples.md  rust-examples.mdx
docs/styles/: globals.css
examples/: basic_usage.rs  memory_graph.rs  sample_data_usage.rs  sample_dataset.rs  unified_database.rs
examples/agent/: .env.example  .gitignore  README.md  THREAD_SAFETY.md  engramdb_thread_safe.py  flask_threadsafe_demo.py  flask_website_generator.py  flask_website_generator_threadsafe.py  pydanticai-llms.txt  temp_fixed.py  temp_part1.py  temp_part2.py  threading.md
examples/agent1/: WEBSITE_GENERATOR.md  flask_website_generator.py  requirements.txt
examples/agent2/: .gitignore  flask_website_generator.py  temp_part2.py
examples/agent2/agent/: README.md  WEBSITE_GENERATOR.md  flask_website_generator.py  temp_fix.py  temp_fixed.py  temp_part1.py
examples/engramdb_mcp_server/: CLAUDE.md  README.md  claude_mcp_config.json  claude_mcp_config.sh  engramdb_mcp_server.py  engramdb_mcp_server_http.py  engramdb_py-0.1.0-cp313-cp313-macosx_11_0_arm64.whl  engramdb_py.py  install_claude_desktop.sh  mcp-llms.txt  pyproject.toml  requirements.txt  run_mcp_server.sh  server.py  test_import.py  test_mcp_server.py
examples/engramdb_mcp_server/mcp/: __init__.py  types.py
examples/engramdb_mcp_server/mcp/server/: __init__.py  flask.py
examples/python/: README.md  agent_memory.py  basic_usage.py  hnsw_multi_vector_example.py  jina_colbert_example.py  memory_and_file_storage.py  memory_graph.py  multi_vector_example.py  requirements.txt  single_file_storage.py  text_embeddings.py  thread_safe_database.py  thread_safe_flask_example.py  unified_database.py
examples/rust/: hnsw_agent_memory.rs  jina_colbert_example.rs  memory_and_file_storage.rs  multi_vector_example.rs  single_file_storage.rs  test_sample_dataset.rs  text_embeddings.rs  thread_safe_database.rs  vector_search_benchmark.rs
python/: .pypirc  Cargo.toml  PUBLISHING.md  README.md  llms-engramdb.txt  llms-full-engramdb.md  llms-full-engramdb.txt  publish.sh  pyproject.toml  test.py
python/engramdb/: __init__.py  utils.py
python/examples/: basic_usage.py  final_demo.py  sample_data_usage.py  simple_test.py
python/scripts/: build_llms_txt.py  llms_txt2ctx.py
python/src/: lib.rs  multi_vector_bindings.rs
python/tests/: test_basic.py
scripts/: run_tests.sh
sdks/python-client/: README.md  pyproject.toml
sdks/python-client/engramdb_client/: __init__.py  client.py  database.py  exceptions.py  memory_node.py  models.py
sdks/python-client/examples/: basic_usage.py
sdks/typescript-client/: README.md  package.json  tsconfig.json
sdks/typescript-client/examples/: basic-usage.ts
sdks/typescript-client/src/: client.ts  database.ts  errors.ts  index.ts  memoryNode.ts  models.ts
src/: database.rs  lib.rs  main.rs
src/api/: auth.rs  config.rs  error.rs  mod.rs
src/api/models/: connection_models.rs  database_models.rs  embedding_models.rs  memory_node_models.rs  mod.rs  search_models.rs
src/api/routes/: connections.rs  databases.rs  embeddings.rs  memory_nodes.rs  (+2 more)
src/background/: llm.rs  mod.rs  task.rs  triggers.rs
src/core/: access_history.rs  connection.rs  memory_node.rs  mod.rs  temporal_layer.rs
src/embeddings/: core.rs  mock.rs  mod.rs  models.rs  multi_vector.rs  providers.rs  tests.rs
src/query/: filter.rs  mod.rs  query_builder.rs
src/storage/: file_storage.rs  memory_storage.rs  mod.rs  single_file_storage.rs
src/utils/: mod.rs
src/vector/: hnsw.rs  hnsw_multi_vector_index.rs  mod.rs  multi_vector_index.rs  similarity.rs  thread_safe.rs  vector_index.rs
test_cli_db/e2/: e2b64593-f9ca-416b-82b6-d07f908e7c61.json
test_cli_db_multi/74/: 74a7482a-7fd4-4419-a8fa-5ed0e5a0c808.json
test_cli_db_multi/89/: 89178284-e169-46c2-9a94-05cb9042ff8b.json
tests/: embedding_tests.rs  query_tests.rs  storage_tests.rs  thread_safety_tests.rs  vector_search_tests.rs
web/: .gitignore  README.md  app.py  app_full.py  embedding_utils.py  install_engramdb.sh  install_ml_deps.sh  requirements.txt  run_example.sh  run_web.sh  test_dataset.py
web/examples/: embedding_example.py
web/templates/: base.html  base_simple.html  connections.html  create.html  edit.html  graph.html  graph_search.html  index.html  index_simple.html  search.html  search_simple.html  view.html
(+9 files in other folders)
