[package]
name = "engramdb"
version = "0.1.0"
edition = "2021"
description = "EngramDB - A specialized database for agent memory systems"
authors = ["Nikola <nikola@example.com>"]
license = "MIT"

[[bin]]
name = "engramdb-cli"
path = "src/bin/cli.rs"
required-features = []

[dependencies]
uuid = { version = "1.5", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }

# CLI Dependencies
notcurses = { version = "=3.6.0", optional = true }

# Embeddings support
rand = { version = "0.8", optional = true }
pyo3 = { version = "0.19", features = ["auto-initialize"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tempfile = "3.8"

[features]
default = ["embeddings"]
embeddings = ["dep:rand"]
python = ["embeddings", "dep:pyo3"]
cli-notcurses = ["dep:notcurses"]

[[bench]]
name = "vector_search"
harness = false