[package]
name = "engramdb"
version = "0.1.0"
edition = "2021"
description = "EngramDB - A specialized database for agent memory systems"
authors = ["Nikola <nikola@example.com>"]
license = "MIT"

[[bin]]
name = "engramdb-cli"
path = "src/bin/cli.rs"
required-features = []

[[bin]]
name = "engramdb-server"
path = "src/bin/server.rs"
required-features = ["api-server"]

[dependencies]
uuid = { version = "1.5", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }

# CLI Dependencies
notcurses = { version = "=3.6.0", optional = true }

# Embeddings support
rand = { version = "0.8", optional = true }
pyo3 = { version = "0.19", features = ["auto-initialize"], optional = true }

# API Server
rocket = { version = "0.5.0", features = ["json"], optional = true }
rocket_okapi = { version = "0.8.0", features = ["swagger"], optional = true }
okapi = { version = "0.7.0", optional = true }
jsonwebtoken = { version = "9.1.0", optional = true }
once_cell = { version = "1.18", optional = true }
dotenv = { version = "0.15", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.2"
tempfile = "3.8"

[features]
default = ["embeddings"]
embeddings = ["dep:rand"]
python = ["embeddings", "dep:pyo3"]
cli-notcurses = ["dep:notcurses"]
api-server = [
    "dep:rocket", 
    "dep:rocket_okapi", 
    "dep:okapi", 
    "dep:jsonwebtoken", 
    "dep:once_cell", 
    "dep:dotenv", 
    "dep:reqwest"
]

[[bench]]
name = "vector_search"
harness = false

[[example]]
name = "multi_vector_example"
path = "examples/rust/multi_vector_example.rs"

[[example]]
name = "jina_colbert_example"
path = "examples/rust/jina_colbert_example.rs"