[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "engramdb-py"
description = "Python bindings for the EngramDB database"
authors = [
    {name = "Niko", email = "engramdb@disequi.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
]
version = "0.1.1"

[project.urls]
Repository = "https://github.com/nkkko/engramdb"
Documentation = "https://github.com/nkkko/engramdb/python/README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "engramdb"
module-name = "_engramdb"
include = ["Cargo.toml", "src/**/*"]
sdist-include = ["python/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]