[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engramdb-mcp-server"
version = "0.1.0"
description = "EngramDB MCP Server - A Model Context Protocol server for EngramDB"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "modelcontextprotocol>=0.1.0",
]

[project.scripts]
engramdb-mcp-server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]